Make HTML use iFrame to allow for customizing `allow` features

--- a/Sources/Resources/YouTubePlayer.html
+++ b/Sources/Resources/YouTubePlayer.html
@@ -35,7 +35,7 @@
 <body>
     <!-- YouTube Player iFrame Container -->
     <div class="embed-container">
-        <div id="player"></div>
+        <iframe id="player" src="https://www.youtube.com/embed/%@?enablejsapi=1" frameborder="0" allow="%@" allowfullscreen=""></iframe>
     </div>
     <!-- YouTube iFrame JS API -->
     <script src="https://www.youtube.com/iframe_api"
